--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -6,4 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+	<TextView
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="Splash Screen"
+		android:textSize="24sp"
+		android:gravity="center"/>
+
 </LinearLayout>
