--- a/app/src/main/res/layout/winner_screen.xml
+++ b/app/src/main/res/layout/winner_screen.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Home Screen"
+		android:text="Winner Screen"
 		android:textSize="24sp"
 		android:layout_gravity="center"
 		/>
 
 	<RelativeLayout
-		android:id="@+id/home_screen_button_tournament"
+		android:id="@+id/winner_screen_button_home"
 		android:layout_width="250dp"
 		android:layout_height="75dp"
 		android:layout_marginTop="100dp"
@@ -25,10 +23,10 @@
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-		    android:text="To Tournament Config"
-		    android:layout_centerInParent="true"
-		    android:textColor="@color/white"
-		    android:textSize="20sp"
+			android:text="To Home"
+			android:layout_centerInParent="true"
+			android:textColor="@color/white"
+			android:textSize="20sp"
 			/>
 
 	</RelativeLayout>
